Mon Aug 12 11:47:31 1996  Barry Jaspan  <bjaspan@mit.edu>

	* kadmin_ct.ct: fix typo in add_principal

Sun Aug 11 16:29:27 1996  Barry Jaspan  <bjaspan@mit.edu>

	* keytab.c: reset static global "quiet" each time; don't print
 	whoami on normal status messages

Tue Aug  6 15:18:49 1996  Barry Jaspan  <bjaspan@mit.edu>

	* kadmin_ct.ct: get_{principals,policies} -> list_*; remove
 	rename_principal

	* kadmin.c: remove unsupported -salt option from ank usage

Fri Aug  2 13:13:24 1996  Barry Jaspan  <bjaspan@DUN-DUN-NOODLES>

	* keytab.c (add_principal): free_keyblock -> free_keyblock_contents

Wed Jul 31 14:20:50 1996  Tom Yu  <tlyu@mit.edu>

	* kadmin.c: Remove delcaration for getpwuid(); already declared in
		pwd.h.

Fri Jul 26 14:26:08 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* Makefile.in (install): Actually install kadmin.local.  (Or
 		rather, don't install kadmin.local as kadmin, and then
 		reinstall kadmin on top of kadmin.)

Wed Jul 24 00:27:59 1996  Sam Hartman  <hartmans@mit.edu>

	* configure.in: Don't replace setenv as it isn't used. 

Thu Jul 25 12:11:49 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* kadmin.c (quit): Return zero so that we return the proper exit
		status. 
		(kadmin_getprivs): Declare function as returning void

Wed Jul 24 14:18:13 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* Makefile.in (all): Use $(LD) instead of $(CC) for link stage.

	* dump.c (dump_db): Zero out kadm5_principal_ent_rec structure
		before passing to rpc code. 

	* kadmin.c (kadmin_addprinc, kadmin_getprinc, kadmin_modprinc):
		   Zero out structures before passing to rpc code.


Tue Jul 23 17:02:04 1996  Tom Yu  <tlyu@voltage-multiplier.mit.edu>

	* Makefile.in: add dependency for kadmin_ct.o

Fri Jul 19 16:10:39 1996  Marc Horowitz  <marc@mit.edu>

	* ss_wrapper.c (main): ss_execute_line was being called with three
 	args.  There are only two, so no error was ever being returned.

Thu Jul 18 19:14:51 1996  Marc Horowitz  <marc@mit.edu>
